# ShaDaPP

./: .gitignore  README.md  auto.sh
src/: CMakeLists.txt  CPackConfig.cmake
src/include/shadapp/: AbstractIndexMessage.h  AbstractMessage.h  BlockInfo.h  ClientConfig.h  CloseMessage.h  ClusterConfigMessage.h  ConfigReader.h  Core.h  Device.h  FileInfo.h  Folder.h  IndexMessage.h  IndexUpdateMessage.h  LocalPeer.h  Logger.h  Network.h  Peer.h  PingMessage.h  PongMessage.h  RequestMessage.h  ResponseMessage.h  SafeApplication.h  Shadapp.h  Test.h
src/include/shadapp/config/: ClientConfig.h  ConfigReader.h  PeerConfig.h
src/include/shadapp/data/: Compression.h  Hash.h  Serializable.h  Serializer.h
src/include/shadapp/fs/: BlockInfo.h  Device.h  FileInfo.h  FileSplitter.h  FileWatcher.h  FileWatcherWorker.h  Folder.h  RequestedBlock.h
src/include/shadapp/protocol/: AbstractIndexMessage.h  AbstractMessage.h  CloseMessage.h  ClusterConfigMessage.h  IndexMessage.h  IndexUpdateMessage.h  Message.h  PingMessage.h  PongMessage.h  RequestMessage.h  ResponseMessage.h  Serializable.h  Serializer.h
src/lib/shadapp/: AbstractIndexMessage.cpp  AbstractMessage.cpp  BlockInfo.cpp  CMakeLists.txt  ClientConfig.cpp  CloseMessage.cpp  ClusterConfigMessage.cpp  ConfigReader.cpp  Device.cpp  FileInfo.cpp  Folder.cpp  IndexMessage.cpp  IndexUpdateMessage.cpp  LocalPeer.cpp  Logger.cpp  Network.cpp  Peer.cpp  PingMessage.cpp  PongMessage.cpp  RequestMessage.cpp  ResponseMessage.cpp  SafeApplication.cpp  Shadapp.cpp  Test.cpp
src/lib/shadapp/config/: ClientConfig.cpp  ConfigReader.cpp  PeerConfig.cpp
src/lib/shadapp/data/: Compression.cpp  Hash.cpp  Serializer.cpp
src/lib/shadapp/fs/: BlockInfo.cpp  Device.cpp  FileInfo.cpp  FileSplitter.cpp  FileWatcher.cpp  FileWatcherWorker.cpp  Folder.cpp  RequestedBlock.cpp
src/lib/shadapp/protocol/: AbstractIndexMessage.cpp  AbstractMessage.cpp  CloseMessage.cpp  ClusterConfigMessage.cpp  IndexMessage.cpp  IndexUpdateMessage.cpp  Message.cpp  PingMessage.cpp  PongMessage.cpp  RequestMessage.cpp  ResponseMessage.cpp  Serializer.cpp
src/resources/shadapp/: configSchema.xsd
test/: config.xml  config2.xml  config3.xml
test/Sync/: .shadappignore  (+5 more)
(+1 files in other folders)
